<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:id="@+id/DiffSpacerRight"
        android:layout_width="37dp"
        android:layout_height="479dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/DifficultyTitleTextview" />

    <Space
        android:id="@+id/DiffSpacerLeft"
        android:layout_width="37dp"
        android:layout_height="479dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/DifficultyTitleTextview" />

    <Space
        android:id="@+id/DiffBottomSpacer"
        android:layout_width="199dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/DiffSpacerRight"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/DifficultyTitleTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/difficulty_title_text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/EasyDifficultyButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:elevation="0dp"
        android:text="@string/easy_button_text" />

    <Button
        android:id="@+id/MediumDifficultyButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="168dp"
        android:text="@string/medium_button_text" />

    <Button
        android:id="@+id/LoadGameButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:text="@string/load_game_button_text" />

    <Button
        android:id="@+id/HardDifficultyButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="238dp"
        android:text="@string/hard_button_text" />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/DiffBottomSpacer"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel_button_text" />
</RelativeLayout>