<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:id="@+id/SpacerRight"
        android:layout_width="45dp"
        android:layout_height="143dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <Space
        android:id="@+id/SpacerLeft"
        android:layout_width="45dp"
        android:layout_height="143dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Space
        android:id="@+id/SpacerBottom"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/SpacerRight" />

    <TextView
        android:id="@+id/GameOverHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="..."
        android:textSize="20sp" />

    <TextView
        android:id="@+id/GameOverSubHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/game_over_ask_new_game"
        android:textSize="18sp" />

    <Button
        android:id="@+id/GameOverYesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/SpacerRight"
        android:layout_toEndOf="@+id/SpacerLeft"
        android:text="@string/game_over_yes_button" />

    <Button
        android:id="@+id/GameOverNoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/SpacerRight"
        android:layout_toStartOf="@+id/SpacerRight"
        android:text="@string/game_over_no_button" />

</RelativeLayout>